Tue Jul 29 00:06:46 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountsWindow.cpp:
	* src/QGaimAccountsWindow.h:
	  - Added an Edit button to the Accounts window.

Mon Jul 28 23:58:13 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* data/images/protocols/small/napster.png:
	* data/images/edit.png:
	  - Updated the edit icon.
	  - Added a Napster protocol icon.

Mon Jul 28 16:05:48 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountEditor.cpp:
	* src/QGaimAccountEditor.h:
	  - Added the Proxy tab.

Mon Jul 28 15:38:42 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountEditor.cpp:
	* src/QGaimAccountEditor.h:
	  - Added the code for the Protocol Options tab.

Mon Jul 28 11:46:19 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountEditor.cpp:
	* src/QGaimAccountEditor.h:
	  - qpe-gaim actually compiles again.
	  - Moved some complex stuff into their own functions.

Mon Jul 28 03:15:08 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountEditor.cpp:
	* src/QGaimAccountEditor.h:
	  - Added a bit more to the account editor dialog.

Mon Jul 28 01:46:18 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountEditor.cpp:
	* src/QGaimAccountEditor.h:
	* src/QGaimProtocolBox.cpp:
	* src/QGaimProtocolBox.h:
	* gaim.pro:
	  - Added a new widget that extends QComboBox and provides a list
	    of available protocols.

Mon Jul 28 00:52:59 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountEditor.cpp:
	* src/QGaimAccountEditor.h:
	* src/QGaimAccountsWindow.cpp:
	* src/QGaimAccountsWindow.h:
	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h:
	* src/QGaimProtocolUtils.cpp:
	* src/QGaimProtocolUtils.h:
	* gaim.pro:
	  - Moved a utility function that worked its way into 3 different
	    classes due to laziness into a new utility class.

Mon Jul 28 00:13:26 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountEditor.cpp: