@@ -1,6 +1,8 @@
 #include "QGaimProtocolBox.h"
 #include "QGaimProtocolUtils.h"
 
+#include <libgaim/debug.h>
+
 #include <qpixmap.h>
 
 QGaimProtocolBox::QGaimProtocolBox(QWidget *parent, const char *name)
@@ -14,6 +16,32 @@ QGaimProtocolBox::QGaimProtocolBox(GaimProtocol protocol, QWidget *parent,
 	: QComboBox(parent, name)
 {
 	buildMenu(protocol);
+}
+
+void
+QGaimProtocolBox::setCurrentProtocol(GaimProtocol protocol)
+{
+	GaimPlugin *plugin;
+	GaimPluginProtocolInfo *prpl_info;
+	GList *p;
+	int i;
+
+	for (p = gaim_plugins_get_protocols(), i = 0;
+		 p != NULL;
+		 p = p->next, i++)
+	{
+		plugin = (GaimPlugin *)p->data;
+		prpl_info = GAIM_PLUGIN_PROTOCOL_INFO(plugin);
+
+		gaim_debug(GAIM_DEBUG_MISC, "QGaimProtocolBox",
+				   "%d, %d\n", prpl_info->protocol, protocol);
+
+		if (prpl_info->protocol == protocol)
+		{
+			setCurrentItem(i);
+			break;
+		}
+	}
 }
 
 void
